replace use of deprecated "new URL" method