@@ -4,7 +4,7 @@ import static org.eclipse.xpanse.modules.deployment.deployers.terraform.Terrafor
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import org.apache.commons.collections4.CollectionUtils;
 import org.eclipse.xpanse.modules.deployment.deployers.terraform.resource.TfState;
 import org.eclipse.xpanse.modules.models.service.deploy.DeployResult;
@@ -21,7 +21,8 @@ class OpenstackTerraformResourceHandlerTest {
     @Test
     void handler() throws IOException {
         TfState tfState = objectMapper.readValue(
-                new URL("file:src/test/resources/openstack-tfstate.json"), TfState.class);
+                URI.create("file:src/test/resources/openstack-tfstate.json").toURL(),
+                TfState.class);
         DeployResult deployResult = new DeployResult();
         deployResult.getPrivateProperties()
                 .put(STATE_FILE_NAME, objectMapper.writeValueAsString(tfState));
@@ -34,7 +35,7 @@ class OpenstackTerraformResourceHandlerTest {
     @Test
     void handler_destroy() throws IOException {
         TfState tfState = objectMapper.readValue(
-                new URL("file:src/test/resources/openstack-tfstate-destroy.json"),
+                URI.create("file:src/test/resources/openstack-tfstate-destroy.json").toURL(),
                 TfState.class);
         DeployResult deployResult = new DeployResult();
         deployResult.getPrivateProperties()
